# crawlengine

./: .clang-format  CMakeLists.txt  LICENSE  build-gdb.sh  build.sh  format-all.sh
src/: collidables.cpp  collidables.hpp  components.cpp  components.hpp  entity.cpp  entity.hpp  entity.tpp  event.hpp  main.cpp  raylib_extended.cpp  raylib_extended.hpp  renderables.cpp  renderables.hpp  renderables.tpp  scene.cpp  scene.hpp  scene.tpp  spatial_hash_map.cpp  spatial_hash_map.hpp  spatial_hash_map.tpp  system.cpp  system.hpp
src/ai/steering/: behaviors.cpp  behaviors.hpp
src/components/: area.hpp  camera.hpp  collider.hpp  colored_rect.hpp  components.cpp  components.hpp  transform.hpp
src/components/locomotion/: force.hpp  heading.hpp  multiplier.hpp  velocity.hpp
src/components/steering/: player.hpp  test.hpp
src/components/tag/: renderable.hpp
src/components/tags/: renderable.hpp
src/entity/: entity.cpp  entity.hpp
src/events/: events.hpp
src/events/area/: enter.hpp  exit.hpp
src/events/inputs/: input.hpp
src/misc/: raylib_extended.cpp  raylib_extended.hpp
src/scene/: collidables.cpp  collidables.hpp  renderables.cpp  renderables.hpp  scene.cpp  scene.hpp  scene.tpp
src/services/: services.hpp
src/services/inputs/: input.hpp  raylib.cpp  raylib.hpp
src/services/renderers/: raylib.cpp  raylib.hpp  renderer.hpp
src/space_partitioners/: spatial_hash_map.cpp  spatial_hash_map.hpp  spatial_hash_map.tpp
src/systems/: area.cpp  area.hpp  follow_camera_targets.cpp  follow_camera_targets.hpp  render_renderables.cpp  render_renderables.hpp  render_to_cameras.cpp  render_to_cameras.hpp  service_wrapper.hpp  service_wrapper.tpp  system.hpp  systems.hpp
src/systems/locomotion/: force.cpp  force.hpp  multiplier.cpp  multiplier.hpp  velocity.cpp  velocity.hpp
src/systems/steering/: player.cpp  player.hpp  test.cpp  test.hpp
